# test-matsuzawa-20251219

./: .gitignore  pyproject.toml
.github/workflows/: dev_compile_latex_with_claude_code.yml
.research/: research_history.json
.research/latex/iclr2024/: main.blg  main.tex
.research/results/: metrics.json  stderr.txt  stdout.txt
.research/results/comparative-1-resnet18-cifar10/: metrics.json
.research/results/comparison/: aggregated_metrics.json
.research/results/proposed-resnet18-cifar10/: metrics.json
config/: config.yaml
config/runs/: comparative-1-resnet18-cifar10.yaml  proposed-resnet18-cifar10.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
