[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scal-optimization"
version = "0.1.0"
description = "SCAL: Spectral-Curriculum Adaptive Learning optimizer"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Research Team", email = "research@example.com"},
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "wandb>=0.15.0",
    "optuna>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "datasets>=2.10.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
